<resources>
    <string name="app_name">彩票吧</string>

    <string name="home_title">首页</string>
    <string name="buy_title">购彩</string>
    <string name="lottery_title">开奖</string>
    <string name="trend_title">走势</string>
    <string name="own_title">我的</string>
    <string name="connection_failed">网络错误，请稍后重试！</string>
    <string name="buy_lottery_successful">购彩成功</string>
    <string name="bet_failed">下注失败，请重试！</string>
    <string name="prompt">提示</string>
    <string name="loading">正在加载...</string>
    <string name="bet_num_not_conform">下的注不符合规范</string>
    <string name="home_page_prompt">通知：微信，支付宝扫一扫支付现只支持小额入款，会员大额入款请优先选择银行转账入款，感谢您一直以来对彩票33的支持！ 彩票33感谢您一直以来对我们的支持，下载手机APP请访问,我们一直在努力给客户带来更好的体验！ 欢迎光临彩票33，平台现已推出支付宝扫一扫，微信扫一扫，充值完成后无需等待马上入款成功，更方便更快捷。 欢迎光临彩票33投注网www.cp33.com，全部彩种网上开始销售，下载手机APP注册会员赠送8元彩金，加入彩票33，天天添彩添财！</string>

    <string name="wan">万</string>
    <string name="qian">千</string>
    <string name="bai">百</string>
    <string name="shi">十</string>
    <string name="ge">个</string>
    <string name="login_prompt">请先登录</string>
    <string name="load_more">点击加载</string>
    <string name="load_all">已加载完全部</string>
    <string name="refresh_successful">刷新成功</string>
    <string name="input_open_name">请输入开户人姓名</string>
    <string name="input_bank_no">请输入银行账号</string>
    <string name="input_province">请输入省份</string>
    <string name="input_open_city">请输入城市</string>
    <string name="input_trade_psw">请输入交易密码</string>
    <string name="input_open_bank">请输入开户银行</string>
    <string name="input_draw_money_count">请输入提现金额</string>
    <string name="input_recharge_count">请输入充值金额</string>
    <string name="pay_prompt_wx">微信支付（扫一扫直接到账）</string>
    <string name="pay_prompt_zfb">支付宝支付（扫一扫直接到账）</string>
    <string name="modify_success">修改成功</string>
    <string name="openning_lottery_prompt">正在开奖，请稍后重试</string>
</resources>