<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/action_bar_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@mipmap/blank_01"
            android:background="@drawable/bg_action_bar_item"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="绑定银行卡"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    
    <TextView
        android:text="请确定填写您的出款银卡资料，以免有心人士窃取"
        android:textSize="16sp"
        android:gravity="center"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="卡号信息"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="开户银行："
                android:textSize="18sp" />
            <EditText
                android:id="@+id/et_openBank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_open_bank"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />
            <!--<Spinner
                android:id="@+id/spi_bankCard"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />-->
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="银行账号："
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_bankNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_bank_no"
                android:inputType="number"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开户人姓名："
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_openName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_open_name"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开户银行省份："
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spi_openProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_province"
                android:inputType="number"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开户银行城市："
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spi_openCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_open_city"
                android:inputType="number"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="设置交易密码："
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="六位纯数字"
                android:maxLength="6"
                android:inputType="numberPassword"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/Button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="确认信息" />

</LinearLayout>